# Juce-Project-Manager-and-Initializer

./: .gitignore  README.md  TODO.txt
.github/ISSUE_TEMPLATE/: feature_request.md
Modules/Controls/: Controls.h  OutputGainKnobLinear.h  module.json
MyAwesomePlugins/DriveR/: CMakeLists.txt
MyAwesomePlugins/DriveR/Source/: CMakeLists.txt  DSP.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Template/MyCMakeProject/: CMakeLists.txt
Template/MyCMakeProject/Source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Template/MyFirstProject/: MyFirstProject.jucer
Template/MyFirstProject/Source/: DSP.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.h
Tools/: README.md  TemplateLayout.json  __init__.py  app_project_initializer.py  app_ui_generator.py  debug_canvas_offset.py  main.py  test_canvas_size_fix.py
Tools/PluginManagerWebApp/: index.html
Tools/PluginManagerWebApp/css/: canvas.css  components.css  properties.css  styles.css
Tools/PluginManagerWebApp/js/: app.js  components.js  utils.js
Tools/ProjectManager/Frontend/: componentFactory.js  index.html  selectionManager.js
Tools/ProjectManager/ProjectManager.Backend/: ProjectManager.Backend.sln
Tools/ProjectManager/ProjectManager.Backend/ProjectManager.Backend/: Program.cs  ProjectManager.Backend.http
Tools/ProjectManager/ProjectManager.Backend/ProjectManager.Backend/Controllers/: ComponentController.cs  ProjectApiController.cs
Tools/ProjectManager/ProjectManager.Backend/ProjectManager.Backend/Controllers/Extensions/: ControllerBaseExtensions.cs
Tools/ProjectManager/ProjectManager.Backend/ProjectManager.Backend/Properties/: launchSettings.json
Tools/ProjectManager/src/: index.html
Tools/src/: JUCECodeOutput.py  JUCECodeSections.py  UIGeneratorApp.py  __init__.py  code_generator.py  code_writer.py  file_manager.py  juce_controls.py
Tools/src/components/: Button.py  ComponentFactory.py  HorizontalSlider.py  Knob.py  Label.py  Meter.py  TextBox.py  Toggle.py  VerticalSlider.py  __init__.py  component.py
Tools/src/panels/: __init__.py  canvas.py  gui_properties.py  juce_toolbox.py  properties.py  toolbox.py
