juce_add_plugin(${PROJECT_NAME}
    # VERSION ...                                           # Set this if the plugin version is different to the project version
    # ICON_BIG ...                                          # ICON_* arguments specify a path to an image file to use as an icon for the Standalone
    # ICON_SMALL ...
    # COMPANY_NAME ...                                      # Specify the name of the plugin's author
    # IS_SYNTH TRUE/FALSE                                   # Is this a synth or an effect?
    # NEEDS_MIDI_INPUT TRUE/FALSE                           # Does the plugin need midi input?
    # NEEDS_MIDI_OUTPUT TRUE/FALSE                          # Does the plugin need midi output?
    # IS_MIDI_EFFECT TRUE/FALSE                             # Is this plugin a MIDI effect?
    # EDITOR_WANTS_KEYBOARD_FOCUS TRUE/FALSE                # Does the editor need keyboard focus?
    # COPY_PLUGIN_AFTER_BUILD TRUE/FALSE                    # Should the plugin be installed to a default location after building?
    PLUGIN_MANUFACTURER_CODE ${PLUGIN_MANUFACTURER_CODE}    # A four-character manufacturer id with at least one upper-case character
    PLUGIN_CODE ${PLUGIN_CODE}                              # A unique four-character plugin id with exactly one upper-case character
                                                            # GarageBand 10.3 requires the first letter to be upper-case, and the remaining letters to be lower-case
    FORMATS AU VST3 Standalone                              # The formats to build. Other valid formats are: AAX Unity VST AU AUv3
    PRODUCT_NAME ${PRODUCT_NAME}                            # The name of the final executable, which can differ from the target name
)

target_sources(${PROJECT_NAME}
    PRIVATE
        PluginProcessor.cpp
        PluginEditor.cpp
        PluginProcessor.h
        PluginEditor.h
        DSP.cpp
)

target_compile_definitions(${PROJECT_NAME}
    PRIVATE
        JUCE_WEB_BROWSER=0
        JUCE_USE_CURL=0
        JUCE_VST3_CAN_REPLACE_VST2=0)

target_link_libraries(${PROJECT_NAME}
    PRIVATE
        juce::juce_audio_utils
        juce::juce_dsp
        juce::juce_gui_extra
    PUBLIC
        juce::juce_recommended_config_flags
        juce::juce_recommended_lto_flags
        juce::juce_recommended_warning_flags
)
